objects/ssot__JobApplnSearchableField__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApplicantAccountId__c</fullName>
        <label>Applicant Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicantEmail__c</fullName>
        <label>Applicant Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicantExperienceRange__c</fullName>
        <label>Applicant Experience Range</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicantName__c</fullName>
        <label>Applicant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicantQualificationText__c</fullName>
        <label>Applicant Qualification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationId__c</fullName>
        <label>Application</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationName__c</fullName>
        <label>Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationStage__c</fullName>
        <label>Application Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AppliedDate__c</fullName>
        <label>Applied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CandidateSourceKeyText__c</fullName>
        <label>Candidate Source Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmploymentOfferStatus__c</fullName>
        <label>Employment Offer Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Job Application Searchable Field Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__JobPositionId__c</fullName>
        <label>Job Position</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__JobPositionName__c</fullName>
        <label>Job Position Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastEvaluationDecisionText__c</fullName>
        <label>Last Evaluation Decision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastEvaluationId__c</fullName>
        <label>Last Evaluation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastEvaluationName__c</fullName>
        <label>Last Evaluation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationName__c</fullName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentPostingId__c</fullName>
        <label>Recruitment Posting</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentPostingName__c</fullName>
        <label>Recruitment Posting Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentRequisitionId__c</fullName>
        <label>Recruitment Requisition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequisitionIdentifier__c</fullName>
        <label>Requisition Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1742275147036_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JobApplnSearchableField_RecruitmentR_rel</label>
        <referenceTo>ssot__RecruitmentRequisition__dlm</referenceTo>
        <relationshipLabel>JobApplnSearchableField_RecruitmentR_rel</relationshipLabel>
        <relationshipName>rel_1742275147036_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1742275151292_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JobApplnSearchableField_JobPositionI_rel</label>
        <referenceTo>ssot__JobPosition__dlm</referenceTo>
        <relationshipLabel>JobApplnSearchableField_JobPositionI_rel</relationshipLabel>
        <relationshipName>rel_1742275151292_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1742275151535_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JobApplnSearchableField_RecruitmentP_rel</label>
        <referenceTo>ssot__RecruitmentPosting__dlm</referenceTo>
        <relationshipLabel>JobApplnSearchableField_RecruitmentP_rel</relationshipLabel>
        <relationshipName>rel_1742275151535_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>